<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_background"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:title="@string/str_apps_name" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/list_divider_line" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/apps_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/footer"
            >

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/id_kr"
                        style="@style/apps_icon_integration"
                        android:src="@drawable/kr" />

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/id_nuggets"
                        style="@style/apps_icon_integration"
                        android:src="@drawable/nuggets" />
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/id_pocket"
                        style="@style/apps_icon_integration"
                        android:src="@drawable/pocket" />

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/id_table"
                        style="@style/apps_icon_integration"
                        android:src="@drawable/table" />
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/id_have"
                        style="@style/apps_icon_integration"
                        android:src="@drawable/have" />

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/id_day"
                        style="@style/apps_icon_integration"
                        android:src="@drawable/day" />
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/id_beijing"
                        style="@style/apps_icon_integration"
                        android:src="@drawable/beijing" />

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/id_cattle"
                        style="@style/apps_icon_integration"
                        android:src="@drawable/cattle" />
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>
        </ScrollView>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/more_apps_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="@dimen/distance_10"
                android:text="@string/str_apps_more"
                android:textColor="@color/color_title"
                android:textSize="@dimen/text_size_12" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/introduction_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/distance_10"
                android:text="@string/str_introduction_tip"
                android:textColor="@color/color_main_introduction_tip"
                android:textSize="@dimen/text_size_10" />
        </android.support.v7.widget.LinearLayoutCompat>
    </RelativeLayout>
</android.support.v7.widget.LinearLayoutCompat>